--- a/exercises/color-palettes/css/style.css
+++ b/exercises/color-palettes/css/style.css
@@ -14,6 +14,7 @@
     font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif
     text-align: right;
 }
+#palette1-color2
 #paltte2{
     background-color: ddc9b4;
     color: old rose;
