--- a/exercises/color-palettes/css/style.css
+++ b/exercises/color-palettes/css/style.css
@@ -31,14 +31,14 @@
 }
 
 #palette2-color1{
-    background-color:#8b728e;
+    background-color:#742c7c;
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: right;
     padding: 24px;
 }
 #palette2-color2{
-    background-color:#694873;
+    background-color:#8b728e;
     color:black;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     text-align: right;
