--- a/exercises/upside-down-tetris/css/style.css
+++ b/exercises/upside-down-tetris/css/style.css
@@ -18,3 +18,26 @@
     background-color: red;
     border-color: crimson;
 }
+.tetris-block{
+    border-width: 12px;
+    border-style: outset;
+    display: inline-block;
+    padding: 20px;
+}
+
+.blue{
+    background-color: blue;
+    border-color: blueviolet;
+}
+
+.tetris-block{
+    border-width: 12px;
+    border-style: outset;
+    display: inline-block;
+    padding: 20px;
+}
+
+.pink{
+    background-color: pink;
+    border-color: da
+}
