--- a/exercises/flexbox-drills-part-1/css/drill.css
+++ b/exercises/flexbox-drills-part-1/css/drill.css
@@ -24,5 +24,6 @@
 /* Drill 5 - Write your code solution below */
 #container-5{
     display: flex;
-    
+    align-items: center;
+    justify-content: center;
 }
