--- a/exercises/metube/css/style.css
+++ b/exercises/metube/css/style.css
@@ -9,26 +9,24 @@ body{
 
 #grid-layout {
     display: grid;
-    grid-template-columns: 250px 1fr;
+    grid-template-columns: 1fr 250px 1fr;
     grid-template-areas: 
         "header header"
         "sidebar main";
 }
 
-#header {
-    grid-area: header;
-    padding: 0px 36px;
+#column-one {
+    background-color: aqua;
+    height: 250px
 }
 
-#sidebar {
-    grid-area: sidebar;
-    padding: opx 24px;
+#column-two {
+    background-color: lightblue;
+    height: 250px
 }
-
-#main {
-    grid-area: main;
-    display: flex;
-    flex-wrap: wrap;
+#column-three {
+    background-color: aqua;
+    height: 250px
 }
 
 #header a {
