--- a/exercises/mebay-producr-page/css/style.css
+++ b/exercises/mebay-producr-page/css/style.css
@@ -9,22 +9,24 @@ body{
 
 #grid-layout {
     display: grid;
-    grid-template-columns: 1fr 250px 1fr;
-    grid-template-areas: 
-        "header header"
-        "sidebar main";
+    grid-template-columns: 250px 1fr 250px;
 }
 
 #column-one {
-    background-color: aqua;
-    height: 250px
+    background-color: lightskyblue;
+    padding-left: 24px;
+    display: flex;
+    flex-direction: column;
 }
 
 #column-two {
-    background-color: lightgreen;
-    height: 250px
+    background-color: lightseagreen;
+}
+
+#column-two img {
+    width: 100%;
 }
 #column-three {
-    background-color: aqua;
-    height: 250px
+    background-color: lightskyblue;
+    padding-left: 24px;
 }
