--- a/exercises/animagram-cards/css/style.css
+++ b/exercises/animagram-cards/css/style.css
@@ -7,3 +7,55 @@
     Just be aware that you may break some
     of the setup.css styling if you do so.
 */
+* {
+    box-sizing: border-box;
+}
+
+body {
+    margin: 0px;
+    font-family: sans-serif;
+}
+
+#section-2 {
+    padding: 24px;
+    min-height: 100px;
+}
+
+#section-2 {
+    background: url("images/animagram-card-0.png");
+    background-size: cover;
+    background-position: center center;
+}
+
+.card-container {
+    display: flex;
+    flex-wrap: wrap;
+    align-items: flex-start;
+}
+
+#section-2 .example-card {
+    max-width: 358px;
+    margin: 16px;
+}
+
+#section-2.example-card{
+    background: url("images/axolotl.png");
+    background-size: cover;
+    background-position: center center;
+}
+
+.card-style-2 .animagram-header .logo {
+    font-size: 36px;
+    font-family: 'Shadows Into Light';
+    font-weight: bold;
+    display: inline-block;
+    border: 3px solid black;
+    border-radius: 50%;
+    width: 66px;
+    text-align: center;
+}
+
+.card-style-2 .animagram-header .brand-name {
+    font-family: 'Acme';
+    font-weight: bold;
+}
