--- a/exercises/themed-gallery-page/css/style.css
+++ b/exercises/themed-gallery-page/css/style.css
@@ -6,3 +6,22 @@ body{
     margin: 0px;
     font-family: sans-serif;
 }
+
+
+#layout{
+    max-width: 200px;
+    margin: 48px auto;
+    text-align: center;
+}
+
+.horzontal-masonry-gallery{
+    display: 100%;
+    height: 100%;
+    gap: 24ox;
+}
+
+.horzontal-masonry-gallery img{
+    height: 50px;
+    flex: 1;
+    object-fit: cover;
+}
