--- a/exercises/document-flow-drills 3/css/drill.css
+++ b/exercises/document-flow-drills 3/css/drill.css
@@ -1,40 +1,17 @@
-/* Drill 1 - Write your code solution below */
-.d1-div {
-    display:inline;
-}
-
-/* Drill 2 - Write your code solution below */
-.d2-span {
-    display: block;
-}
-
-/* Drill 3 - Write your code solution below */
-
-.d3-div {
-    display: inline;
-}
-/* Drill 4 - Write your code solution below */
-.d4-div {
-    display:inline-block;
-}
-
-/* Drill 5 - Write your code solution below */
-.d3-div{
-    display: inline-block;
-}
-#d5-div1{
-    width: 250;
-}
-#d5-div2{
-    width: 230;
-}
-
 /* Drill 6 - Write your code solution below */
-#d-div{
-    display: inline-block;
-    width: 45%;
+#contaniner-6{
+    display: flex;
+    justify-content: space-between;
 }
-#d6-div3 {
-    display:inline-block
-    width: 48%;
-}
+
+/* Drill 7 - Write your code solution below */
+
+
+/* Drill 8 - Write your code solution below */
+
+
+/* Drill 9 - Write your code solution below */
+
+
+/* Drill 10 - Write your code solution below */
+
