--- a/demos/20-media-queries/css/style.css
+++ b/demos/20-media-queries/css/style.css
@@ -113,7 +113,7 @@ body {
 
 
 /* Table Breakpoint*/ 
-@@media screen and (max-width: 768px) and (min-width: 481px) {
+@media screen and (max-width: 768px) and (min-width: 481px) {
     body {
         /*background-color: skyblue;*/
     }
