--- a/demos/22-dropdown-menus/css/style.css
+++ b/demos/22-dropdown-menus/css/style.css
@@ -48,6 +48,10 @@
             visibility 0.25s;
     }
 
+    .dropdown-container:last-child .dropdown-menu {
+        right: 0px;}
+        
+
     .dropdown-container:hover .dropdown-menu {
         opacity: 1;
         visibility: visible;
