--- a/projects/dropdown-menu-site/css/style.css
+++ b/projects/dropdown-menu-site/css/style.css
@@ -1,8 +1,87 @@
 * {
-    box-sizing: border-box;
-}
+    box-sizing: border-box;}
 
 body {
     margin: 0px;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: sans-serif;
+}
+
+#navbar {
+    background: linear-gradient(to bottom, #a16c21cc,#875d0acd);
+    display: flex;
+    align-items: center;
+}
+
+#navbar a {
+    display: inline-block;
+    text-decoration: none;
+    color: white;
+    padding: 24px;
+}
+
+#navbar #logo {
+    margin-right: auto;
+    font-weight: bold;
+    font-size: 36px;
+    padding-top: 13ox;
+    padding-bottom: 12px;
+}
+
+#navbar a:hover {
+    background: linear-gradient(
+        to top, 
+        #f39213,
+        #e9710e
+    );
+}
+
+#hero {
+    background-image: url("../images/Family-and-pet.jpg");
+    height: 100vh;
+    background-size: contain;
+    background-position: center center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.dropdown-container {
+    position: relative;
+}
+    
+.dropdown-menu {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    transition: 
+        opacity 0.25s,
+        visibility 0.25s;
+}
+
+.dropdown-container:last-child .dropdown-menu {
+    right: 0px;
+}
+    
+
+.dropdown-container:hover .dropdown-menu {
+    opacity: 1;
+    visibility: visible;
+}
+
+.dropdown-menu a {
+    background-color: #f39213;
+    width: 100%;
+    min-width: 200px;
+}
+    
+    
+#navbar .dropdown-menu a:hover {
+    background: #e9710e;
+}
+
+.dropdown-menu img a {
+    width: 100%;
+    height: 300px;
+    object-fit: cover;
+    border-radius: 24px;
 }
