--- a/exercises/client-navbars/css/style.css
+++ b/exercises/client-navbars/css/style.css
@@ -31,7 +31,7 @@
     }
     
     .navbar .cta-buttom {
-        background-color: rgb(255, 255, 255);
+        background-color: #ffffff;
         color: rgb(177, 7, 7);
         border-radius: 50px;
         padding: 16px 24px;
