--- a/exercises/client-navbars/css/style.css
+++ b/exercises/client-navbars/css/style.css
@@ -59,7 +59,7 @@
     #navbar.angelears a:hover {
         background: linear-gradient(
             to top, 
-            #1d8e4e,
-            #1d8e4e
+            #f8482d,
+            #f8482d
         );
     }
