--- a/projects/dropdown-menu-site/css/style.css
+++ b/projects/dropdown-menu-site/css/style.css
@@ -23,7 +23,7 @@ body {
     margin-right: auto;
     font-weight: bold;
     font-size: 36px;
-    padding-top: 13ox;
+    padding-top: 13px;
     padding-bottom: 12px;
 }
 
