--- a/projects/restaurant/css/style.css
+++ b/projects/restaurant/css/style.css
@@ -7,8 +7,9 @@ body {
 }
 
 #navbar {
-    background: linear-gradient(to bottom, #a16c21cc,#875d0acd);
+    background: linear-gradient(to bottom, #191919,#191919);
     display: flex;
+    justify-content: space-between;
     align-items: center;
 }
 
@@ -17,4 +18,127 @@ body {
     text-decoration: none;
     color: white;
     padding: 24px;
+    border-radius: 26px;
+}
+
+#navbar #logo {
+    margin-right: auto;
+    font-weight: bold;
+    font-size: 36px;
+    padding-top: 13px;
+    padding-bottom: 12px;
+}
+
+#navbar .cta-buttom {
+    background-color: white;
+    color: #22bec3;
+    border-radius: 36px;
+    padding: 16px 24px;
+    font-size: 20px;
+    font-weight: bold;
+    min-width: 150px;
+    text-align: center;
+    margin-right: 24px;
+}
+
+#navbar a:hover {
+    background: linear-gradient(
+        to top, 
+        #cc3366,
+        #cc3366
+    );
+}
+
+.dropdown-container {
+    position: relative;
+}
+
+.dropdown-menu {
+    position: absolute;
+    opacity: 0;
+    visibility: hidden;
+    transition: 
+        opacity 0.25s,
+        visibility 0.25s;
+    z-index: 10;
+}
+
+#dropdown-container:last-child .dropdown-menu {
+    margin-right: 24px;
+}
+
+.dropdown-container:hover .dropdown-menu {
+    opacity: 1;
+    visibility: visible;
+}
+
+.dropdown-menu a {
+    background-color: #22bec3;
+    width: 100%;
+    min-width: 200px;
+}
+
+#navbar .dropdown-menu a:hover {
+    background: #dc4978;
+}
+
+#hero {
+    background-image: url("../images/ryan-concepcion.jpg");
+    height: 100vh; 
+    background-size: contain;
+    background-position: center center;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+#three-columns {
+    margin: 48px 0px;
+    display: grid;
+    grid-template-columns: 1fr 200px 550px 1fr;
+    grid-template-areas: ". left-sidebar main-area.";
+}
+
+#column-1 {
+    margin-left: 24px;
+    grid-area: left-sidebar;
+}
+
+#column-2 {
+    padding: 24px 48px;
+    grid-area: main-area;
+}
+
+#three-columns h2 {
+    border-bottom: 2px solid #AAAAAA;
+    padding-bottom: 8px;
+}
+
+#three-columns ul {
+    list-style-type: none;
+    padding: 0px;
+}
+    
+#three-columns ul li {
+    padding: 4px 0px;
+}
+    
+    
+#three-columns ul a {
+    color: #EEEEEE;
+    text-decoration: none;
+}
+    
+    
+.sticky-sidebar {
+    position: sticky;
+    top: 24px;
+    background-color: #dc4978;
+    border-radius: 4px;
+    padding: 24px;
+}
+
+@media screen and ( max-width: 900px) {
+    #navbar {
+        flex-direction: column;
+    }
 }
